Merged revisions 84984 via svnmerge from svn+ssh://pythondev@svn.python.org/python/branches/py3k

........
  r84984 | mark.dickinson | 2010-09-23 21:11:19 +0100 (Thu, 23 Sep 2010) | 5 lines

  Issue #9930: Remove an unnecessary type check in wrap_binaryfunc_r;
  this was causing reversed method calls like float.__radd__(3.0, 1) to
  return NotImplemented instead of the expected numeric value.
........